[package]
name = "rebound"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { path = "../amethyst_lyon/external/amethyst", features = ["metal"] }
#amethyst = "0.15.0"
#amethyst_error = "0.5.0"
# amethyst = { git = "https://github.com/amethyst/amethyst" }
#amethyst_error = { git = "https://github.com/amethyst/amethyst" }
amethyst_error = { path = "../amethyst_lyon/external/amethyst/amethyst_error" }
derivative = "2.1.0"
glsl-layout = "0.3.2"
#lyon = { path = "./external/lyon" }
amethyst_lyon = { path = "../amethyst_lyon", features = ["metal"] }
#amethyst_lyon = "0.1.0"
lyon = "0.15.6"
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
failure = "0.1.7"
lazy_static = "1.4.0"
nalgebra = "0.21.0"
derive-new = "0.5.8"
palette = "0.5"
hex = "0.4.2"
libmath = "0.2.1"


[features]
# default = ["vulkan"] # For linux Windows
default = ["metal"] # For osx
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]